--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,35 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+$black: #181818;
+$text_bright: #fafafa;
+
+//Navigation Dialog SCSS - Needs to be in root
+.full-screen-dialog{
+  max-width: 100vw !important;
+  box-sizing: border-box;
+  overflow: hidden;
+  display: flex;
+}
+
+.full-screen-dialog .mat-dialog-container{
+  border-radius: 0;
+  width:100vw;
+  height:100vh;
+  margin:0;
+  padding: 10%;
+  overflow: hidden;
+  color: $text_bright;
+  background: $black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+}
+
+.mat-dialog-actions{
+  justify-content: center;
+}
+
