--- a/src/app/navigation-menu/navigation-menu.component.scss
+++ b/src/app/navigation-menu/navigation-menu.component.scss
@@ -1,1 +1,27 @@
+@import "src/styles/colors";
+
+.navbar-logo{
+  max-height: 7vh;
+  max-width: 80vw;
+  margin: 0;
+}
+
+.bg-custom{
+  background-color: $menu-bar;
+}
+
+.navbar-dropdown{
+  color: $contrast;
+  transition: .2s ease-in-out 0s;
+}
+
+.navbar-dropdown:hover{
+  color: $contrast-dark;
+  transform: scale(1.3);
+}
+
+.navbar-dropdown:focus{
+  outline: none !important;
+}
+
 
