--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+@import "src/styles/colors";
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-$black: #181818;
-$text_bright: #fafafa;
+.page-container{
+  background-color: $background-dark;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+}
 
 //Navigation Dialog SCSS - Needs to be in root
 .full-screen-dialog{
