--- a/src/app/private-event/private-event.component.html
+++ b/src/app/private-event/private-event.component.html
@@ -13,10 +13,12 @@
                 <mat-form-field class="col-6">
                   <mat-label>Enter your email</mat-label>
                   <input matInput placeholder="john.smith@example.com" formControlName="email" required>
+                  <mat-error> Please enter you email address. </mat-error>
                 </mat-form-field>
                 <mat-form-field class="col-6">
                   <mat-label>Enter your name</mat-label>
                   <input matInput placeholder="John Smith" formControlName="name" required>
+                  <mat-error> Please enter your name. </mat-error>
                 </mat-form-field>
               </div>
               <hr class="hr" />
@@ -25,6 +27,7 @@
                 <mat-form-field>
                   <mat-label>What Event are you planning?</mat-label>
                   <input matInput placeholder="Super Duper Wedding" formControlName="title" required>
+                  <mat-error> Please enter a title for the event you like to organize. </mat-error>
                 </mat-form-field>
               </div>
               <div class="row">
@@ -35,7 +38,7 @@
               </div>
               <div class="row">
                 <mat-form-field class="col-11">
-                  <mat-label>Possible dates for you event to choose from</mat-label>
+                  <mat-label>Possible dates for the participants to choose from</mat-label>
                   <input matInput formControlName="dateList" class="picker-list">
                 </mat-form-field>
                 <div class="col text-end">
@@ -56,7 +59,7 @@
                 </div>
               </div>
               <div class="row justify-content-center">
-                <button type="submit" class="btn card-button col-3">Create your Event</button>
+                <button (click)="createEvent()" class="btn card-button col-3">Create your Event</button>
               </div>
             </form>
           </div>
