--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,20 +1,7 @@
 <section class="wrapper">
   <div class="container">
     <div class="row pb-5">
-      <div class="row justify-content-center">
-        <div class="col-sm-12 col-md-10 col-lg-10 mb-2">
-          <div class="card search-bar text-dark" style="background-image:url('assets/img/private-event-bg.jpg');">
-            <div class="card-img-overlay">
-              <form class="d-flex search-container">
-                <input class="form-control search-text me-2" type="search" placeholder="Find public events!" aria-label="Search">
-                <button class="btn btn-dark search-button" (click)="searchEvents()">
-                  <mat-icon class="search-icon">search</mat-icon>
-                </button>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
+      <app-search-bar></app-search-bar>
     </div>
 
     <div class="row">
