Fixed Navigation Bar, Scrollbar Horizontal, Added Attendants for Public Events, Fixed Searchbar-reload

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-navigation-menu></app-navigation-menu>
-<div class="page-container">
+<div fxLayout="column" class="page-container">
+  <app-navigation-menu></app-navigation-menu>
   <router-outlet></router-outlet>
 </div>
