--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -8,6 +8,7 @@ $contrast-trans4: rgba(255, 166, 46, 0.4);
 $contrast-trans7: rgba(253, 187, 96, 0.7);
 $contrast-dark: #ff7e2e;
 $red-contrast: #F94339;
+$red-contrast-trans4: rgba(249, 67, 57, 0.4);
 $text_bright: #fafafa;
 $text_secondary: #b3b3b3;
 $text_dark_primary: #121212;
