--- a/src/app/private-event/create-private-event.component.html
+++ b/src/app/private-event/create-private-event.component.html
@@ -37,6 +37,12 @@
                 </mat-form-field>
               </div>
               <div class="row">
+                <mat-form-field>
+                  <mat-label>Your extravagance event-location</mat-label>
+                  <input matInput placeholder="Yacht on Venice Beach" formControlName="location">
+                </mat-form-field>
+              </div>
+              <div class="row">
                 <mat-form-field class="col-11">
                   <mat-label>Possible dates for the participants to choose from</mat-label>
                   <input matInput formControlName="dateList" class="picker-list">
