--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,3 +64,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   background: $contrast;
   border-radius: 10px;
 }
+
+.notification-button{
+  .mat-button-wrapper{
+    padding: 0 !important;
+  }
+}
